# Marlut

./: .gitignore  Cargo.toml  LICENSE  README.md  README_MAESTRO.md  openssl-config.txt  p1.toml  p2.toml  p3.toml  process_csv.py  run.sh  run_bench.sh
keys/: p1.key  p1.pem  p2.key  p2.pem  p3.key  p3.pem
marlut/: Cargo.toml
marlut/benches/: field_mul_benchmark.rs
marlut/src/: lib.rs  main.rs
marlut/src/aes/: mod.rs  ss.rs
marlut/src/benchmark/: lut256.rs  lut256_sp.rs  lut256_sp_boolean.rs  maepro10.rs  mod.rs  random_bits.rs  utils.rs  wollut16.rs  wollut16_malsec.rs
marlut/src/chida/: mod.rs  online.rs
marlut/src/lut256/: lut256_ss.rs  mod.rs  offline.rs  online.rs
marlut/src/lut_sp/: cut_bucket.rs  lut256_tables.rs  mae_pro10.rs  mod.rs  our_offline.rs  our_online.rs
marlut/src/lut_sp_boolean/: lut256_tables.rs  mod.rs  our_offline.rs  our_online.rs
marlut/src/lut_sp_boolean_malsec/: README.md  mult_verification.rs
marlut/src/lut_sp_malsec/: mod.rs  mult_verification.rs
marlut/src/rep3_core/: mod.rs
marlut/src/rep3_core/network/: mod.rs  non_blocking.rs  task.rs
marlut/src/rep3_core/party/: broadcast.rs  correlated_randomness.rs  mod.rs  thread_party.rs
marlut/src/rep3_core/share/: mod.rs
marlut/src/share/: bs_bool16.rs  bs_bool8.rs  gf2p64.rs  gf4.rs  gf8.rs  mersenne61.rs  mod.rs  unsigned_ring.rs
marlut/src/util/: aligned_vec.rs  mod.rs  mul_triple_vec.rs  un_bitslice.rs
marlut/src/wollut16/: mod.rs  offline.rs  online.rs
marlut/src/wollut16_malsec/: mod.rs  mult_verification.rs  offline.rs  online.rs
scripts/: exp_table.py  (+4 more)
(+4 files in other folders)
